fix: hide overflow of slideshow

--- a/stylesheet/glide.css
+++ b/stylesheet/glide.css
@@ -4,6 +4,7 @@
     position: relative;
     width: 100%;
     height: 600px;
+    overflow: hidden;
 }
 
 .slides {
